2008-03-14  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/tour.html: 
	  sharpen the cheese tour images

2008-03-14  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  make the cheese page w3c valid

2008-03-13  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/images/cheese-tour.png,
	  www.gnome.org/projects/cheese/data/images/cheese-tour.svg,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/tour.html: 
	  add the cheese tour banner

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: try to simplify the redirect for the release
	notes (and handle more things)

2008-03-12  Boyd Timothy  <btimothy@gmail.com>

	* www.gnome.org/projects/index.wml: Added the Tasque project.

2008-03-12  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.wml: added GNOME 2.22 news blurb and banner.
	* www.gnome.org/img/flash/two-twenty-two.png,
	www.gnome.org/img/flash/Makefile.am: GNOME 2.22 banner.

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: update for 2.22.0
	* www.gnome.org/start/index.wml: ditto, and stop including an outdated
	list of distros shipping GNOME.

2008-03-12  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/devel.html: 
	* www.gnome.org/projects/garnome/index.html: 
	New stable GNOME 2.22.0.

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/tour.html: 
	  rephrase a sentence on the cheese tour
