@@ -73,86 +73,6 @@
             of Code, the development continued and we still are looking for
             people with nice ideas and patches ;)
             </p>
-<!--
-            <h2>Effects</h2>
-            <div class="iconr">
-            <img src="data/images/preferences-desktop-wallpaper.png" alt="icon" />
-            </div>
-            <p>
-            Just bought a webcam? That's boring, it's much more fun morphing yourself
-            into Hulk or a nice pink alien, or even pile up effects in order to
-            obtain the most amazing results! Right now, you can for instance apply the
-            following effects to photos and videos:
-            </p>
-
-            <div style="width: 48%; float: left;">
-            <ul>
-              <li>Mauve</li>
-              <li>Noir/Blanc</li>
-              <li>Saturation</li>
-              <li>Hulk</li>
-              <li>Shagadelic</li>
-            </ul>
-            </div>
-            <div style="width: 48%; float: right;">
-            <ul>
-              <li>Vertical Flip</li>
-              <li>Horizontal Flip</li>
-              <li>Vertigo</li>
-              <li>Edge</li>
-              <li>Dice</li>
-              <li>Warp</li>
-            </ul>
-            </div>
-
-            <h2>Scene 42, action!</h2>
-            <div class="iconl">
-            <img src="data/images/video-x-generic.png" alt="icon" />
-            </div>
-            <p>
-            In addition to photos, Cheese allows you to record videos. Even
-            there you can record them with effects. So Mr.
-            Kubrick, go ahead and present us your new Hollywood-movie!
-            </p>
-
-
-            <h2>Share</h2>
-            <div class="iconr">
-            <img src="data/images/system-users.png" alt="icon" />
-            </div>
-            <p>
-            Finished taking pictures and movies? Or doesn't your makeup look
-            good? Then go ahead and share your files to your friends and
-            family! It's already possible to export
-            photos to F-Spot and upload them to Flickr, mail them or use them
-            as your account photo in GNOME. Of course you can save it anywhere
-            on your disk. Future releases will provide bindings to 
-            <a href="http://www.conduit-project.org">Conduit</a>, which will
-            allow you to share your photos and videos to many more places, e.g.
-            setting the Facebook account photo or putting your Hulk-like photo
-            on your iPod!
-            </p>
-
-            <h2>Future</h2>
-            <div class="iconl">
-            <img src="data/images/dialog-information.png" alt="icon" />
-            </div>
-            <p>
-            The project isn't stopping here. We are already
-            looking forward, and an integration with Conduit already in the
-            works will permit exchanging online photos and videos as well as
-            deep integration with the desktop. 
-            The software will also use OpenGL to speed-up image
-            and video processing, enabling us to add real-time effects as well as
-            eye-candy. We are already considering features such as live
-            incrustation of props and backgrounds, motion tracking, automatic
-            hackergotchi creation, raffle mode and much more..
-            If you want to know more, have a look at our 
-            <a href="http://live.gnome.org/Cheese/Ideas">crazy ideas</a>
-            and a very ambitious
-            <a href="http://live.gnome.org/Cheese/Roadmap">roadmap</a>.
-            </p>
-            -->
 
             <h2>What are the Requirements?</h2>
             <div class="iconr">
@@ -206,7 +126,8 @@
             <div style="width: 49%; float: left;">
             <ul>
               <li><a target="_blank" href="http://ubuntuforums.org/showthread.php?t=486722">Cheese HowTo in the Ubuntu Forums</a></li>
-              <li><a target="_blank" href="http://www.phoronix.com/scan.php?page=article&amp;item=980&amp;num=2">Phoronix Article about Improvments in GNOME 2.22</a></li>
+              <li><a target="_blank" href="http://www.phoronix.com/scan.php?page=article&amp;item=980&amp;num=2">Phoronix Article about Improvements in GNOME 2.22</a></li>
+              <li><a target="_blank" href="http://tombuntu.com/index.php/2007/09/19/cheesy-photo-booth-like-app-for-gnome/">Tombuntu Article about Cheese</a></li>
             </ul>
             </div>
 
