@@ -1,3 +1,8 @@
+2008-03-17  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  add a new link to the press section of cheese
+
 2008-03-14  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
